[package]
name = "epistemology"
version = "0.3.6"
edition = "2021"
description = "A simple and clear way of hosting llama.cpp as a private HTTP API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-files = "0.6.2"
actix-tls = { version = "3.0.0-rc.2" }
actix-web = {version="4.4.1", features=["openssl"]}
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.30"
gbnf = "0.1.1"
openssl = "0.10.63"
rcgen = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.35.1"
tokio-stream = "0.1.14"
